--- a/app/assets/styles/_all.scss
+++ b/app/assets/styles/_all.scss
@@ -1,6 +1,10 @@
 @import "utils";
 @import "global";
 @import "layout";
+@import "nprogress";
+
 
 // just uses the sprite scss file, indivual svg files are available
 @import "icons/sprite-fixes";
+
+
