--- a/app/assets/templates/sprint.html
+++ b/app/assets/templates/sprint.html
@@ -1,5 +1,6 @@
-<div class="">
-    <div class="header">
-        <h3 class="text-muted">Sprint View</h3>
+<article class="primary">
+    <div class="content-margins">
+        <h2><%= data.title %></h2>
+        <p><%= data.content %></p>
     </div>
-</div>
+</article>
