--- a/app/assets/styles/_layout.scss
+++ b/app/assets/styles/_layout.scss
@@ -1,4 +1,6 @@
 
+
+
 .content-margins {
     margin: 10px;
 
@@ -12,8 +14,8 @@
 
 .primary {
     @include respond-min(45em) {
-        float: left;
-        width: 70%;
+/*         float: left;
+        width: 70%; */
 
         @include old-ie {
             // These hacks won't appear in the normal stylesheet
@@ -28,37 +30,76 @@
     }
 }
 
-#app {
+body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.app {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    color: #444;
+    background: #ccc;
+}
+
+.header {
+    width: 100%;
+    z-index: 100;
+}
+
+.app-nav {
+
+}
+
+.app-nav__menu {
     margin: 0;
     padding: 0;
-    color: #444;
+    display: flex; /* or inline-flex */
+}
+
+.app-nav__menu-item {
+    display: flex-grow;
+    list-style: none;
+
+    a {
+        display: block;
+        padding: 20px;
+    }
+}
+
+.main {
+    position: relative;
 }
 
 .page {
     position: absolute;
+    height: 100%;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     text-align: center;
-    transition: transform 0.5s ease;
-    transform: translate3d(0, 100%, 0);
+    background: green;
+    //transform: translate3d(0, 100%, 0);
 
-    &.is-visible {
-        transform: translate3d(0, 0, 0);
+    &.page--is-visible {
+       // transform: translate3d(0, 0, 0);
     }
-}
 
+    &.page--is-exiting {
 
-.home-page {
-    background: red;
-}
+    }
 
-.sprint-page {
-    background: blue;
-}
-.week-page {
-    background: blue;
+    &.page--is-entering {
+
+    }
+
+    &.page--home {
+        background: red;
+    }
 }
 
 
