--- a/app/assets/templates/index.html
+++ b/app/assets/templates/index.html
@@ -1,16 +1,7 @@
-
-<div class="header">
-    <h3 class="text-muted">Index</h3>
-</div>
 <article class="primary">
     <div class="content-margins">
-        <h2>Sample SVG Icons</h2>
-        <span class="svg-icon svg-chevron-left svg-chevron-left-dims"></span>
-        <span class="svg-icon svg-chevron-right svg-chevron-right-dims"></span>
-        <ul>
-            <li><a href="sprint">Sprint</a></li>
-            <li><a href="week">Week</a></li>
-        </ul>
+        <h2><%= data.title %></h2>
+        <p><%= data.content %></p>
     </div>
 </article>
 
