--- a/app/assets/styles/_layout.scss
+++ b/app/assets/styles/_layout.scss
@@ -92,6 +92,9 @@ body {
     padding: 4em 2em;
     color: #fff;
     //transform: translate3d(0, 100%, 0);
+    opacity: 1;
+    display: block;
+  left: 100%;
 
     &.page--is-visible {
        // transform: translate3d(0, 0, 0);
