--- a/app/assets/styles/_layout.scss
+++ b/app/assets/styles/_layout.scss
@@ -114,6 +114,14 @@ body {
     background: #f68dbb;
 }
 
+.page--about {
+    background: #60d7a9;
+}
+
+.page--contact {
+    background: #fdc162;
+}
+
 .absolute-center {
     text-align: center;
     //background: #ccc;
