adds active class to nav menu

--- a/app/assets/styles/_all.scss
+++ b/app/assets/styles/_all.scss
@@ -2,7 +2,8 @@
 @import "global";
 @import "layout";
 @import "nprogress";
-
+@import "nav";
+@import "page";
 
 // just uses the sprite scss file, indivual svg files are available
 @import "icons/sprite-fixes";
