--- a/app/assets/styles/_layout.scss
+++ b/app/assets/styles/_layout.scss
@@ -13,6 +13,9 @@
 }
 
 .primary {
+    padding-top: 2em;
+    width: 70%;
+    margin: 0 auto;
     @include respond-min(45em) {
 /*         float: left;
         width: 70%; */
@@ -52,25 +55,6 @@ body {
     background: #e7e7e7;
 }
 
-.app-nav {
-
-}
-
-.app-nav__menu {
-    margin: 0;
-    padding: 0;
-    display: flex; /* or inline-flex */
-}
-
-.app-nav__menu-item {
-    display: flex-grow;
-    list-style: none;
-
-    a {
-        display: block;
-        padding: 20px;
-    }
-}
 
 .main {
     position: absolute;
@@ -79,47 +63,6 @@ body {
 /*     -webkit-perspective: 1200px;
     -moz-perspective: 1200px;
     perspective: 1200px; */
-}
-
-.page {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    text-align: center;
-    background: #0ac2d2;
-    padding: 4em 2em;
-    color: #fff;
-    //transform: translate3d(0, 100%, 0);
-    opacity: 1;
-    display: block;
-  left: 100%;
-
-    &.page--is-visible {
-       // transform: translate3d(0, 0, 0);
-    }
-
-    &.page--is-exiting {
-
-    }
-
-    &.page--is-entering {
-
-    }
-
-}
-
-.page--home {
-    background: #f68dbb;
-}
-
-.page--about {
-    background: #60d7a9;
-}
-
-.page--contact {
-    background: #fdc162;
 }
 
 .absolute-center {
