--- a/app/assets/styles/_all.scss
+++ b/app/assets/styles/_all.scss
@@ -4,8 +4,7 @@
 @import "nprogress";
 @import "nav";
 @import "page";
+@import "footer";
 
 // just uses the sprite scss file, indivual svg files are available
 @import "icons/sprite-fixes";
-
-
