--- a/app/assets/styles/_layout.scss
+++ b/app/assets/styles/_layout.scss
@@ -1,12 +1,10 @@
-
-
-
 .content-margins {
     margin: 10px;
 
     @include respond-min(60em) {
         margin: 20px;
     }
+
     @include respond-min(75em) {
         margin: 40px;
     }
@@ -16,9 +14,10 @@
     padding-top: 2em;
     width: 70%;
     margin: 0 auto;
+
     @include respond-min(45em) {
-/*         float: left;
-        width: 70%; */
+        /*         float: left;
+                width: 70%; */
 
         @include old-ie {
             // These hacks won't appear in the normal stylesheet
@@ -37,6 +36,7 @@ body {
     height: 100%;
     padding: 0;
     margin: 0;
+    overflow: hidden;
 }
 
 /* .app {
@@ -53,16 +53,17 @@ body {
     position: fixed;
     top: 0;
     background: #e7e7e7;
+    z-index: 3;
 }
-
 
 .main {
     position: absolute;
     width: 100%;
     height: 100%;
-/*     -webkit-perspective: 1200px;
-    -moz-perspective: 1200px;
-    perspective: 1200px; */
+    z-index: 2;
+    /*     -webkit-perspective: 1200px;
+        -moz-perspective: 1200px;
+        perspective: 1200px; */
 }
 
 .absolute-center {
@@ -88,4 +89,3 @@ body {
         height: auto;
     }
 }
-
