--- a/app/assets/styles/_page.scss
+++ b/app/assets/styles/_page.scss
@@ -1,10 +1,14 @@
-
 .page {
-    width: 100%;
-    height: 100%;
-    position: relative;
+    /*     width: 100%;
+        height: 100%; */
+    /*     top: 0;
+left: 0; */
+    position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: auto;
     text-align: center;
     background: #0ac2d2;
     padding: 4em 2em;
@@ -13,19 +17,21 @@
     opacity: 1;
     display: block;
     left: 100%;
+    margin-bottom: 250px;
 
     &.page--is-visible {
-       // transform: translate3d(0, 0, 0);
+        // transform: translate3d(0, 0, 0);
+
     }
 
-    &.page--is-exiting {
-position: absolute;
-    }
-
+    &.page--is-exiting,
     &.page--is-entering {
-position: absolute;
+        /*         position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0; */
     }
-
 }
 
 .page--home {
