--- a/app/assets/styles/_page.scss
+++ b/app/assets/styles/_page.scss
@@ -7,7 +7,7 @@ left: 0; */
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     overflow: auto;
     text-align: center;
     background: #0ac2d2;
@@ -17,7 +17,7 @@ left: 0; */
     opacity: 1;
     display: block;
     left: 100%;
-    margin-bottom: 250px;
+    margin-bottom: 172px;
 
     &.page--is-visible {
         // transform: translate3d(0, 0, 0);
