adds example of initialising a jquer plugin after view has been shown

--- a/app/assets/styles/_all.scss
+++ b/app/assets/styles/_all.scss
@@ -6,5 +6,7 @@
 @import "page";
 @import "footer";
 
+@import "home";
+
 // just uses the sprite scss file, indivual svg files are available
 @import "icons/sprite-fixes";
