--- a/app/assets/templates/page.html
+++ b/app/assets/templates/page.html
@@ -1,4 +1,10 @@
-<article class="primary">
-    <h1><%= data.title %></h1>
-    <p><%= data.content %></p>
-</article>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
+            <article class="primary">
+                <h1><%= data.title %></h1>
+                <p><%= data.content %></p>
+            </article>
+        </div><!--/.col- -->
+    </div><!--/.row-->
+</div><!--/.container-->
