--- a/app/assets/styles/_page.scss
+++ b/app/assets/styles/_page.scss
@@ -1,11 +1,17 @@
+.pane {
+    height: 100%;
+    width: 100%;
+    background: #fff;
+    color: #000;
+}
+
+.pane.green {
+    margin-bottom: 400px;
+}
+
 .page {
-    /*     width: 100%;
-        height: 100%; */
-    /*     top: 0;
-left: 0; */
     position: absolute;
     top: 0;
-    left: 0;
     width: 100%;
     min-height: 100vh;
     overflow: auto;
@@ -13,15 +19,15 @@ left: 0; */
     background: #0ac2d2;
     padding: 4em 0;
     color: #fff;
-    //transform: translate3d(0, 100%, 0);
     opacity: 1;
     display: block;
+    left: 0;
     left: 100%;
     margin-bottom: 128px; // needs to be same height as footer
 
     &.page--is-visible {
         // transform: translate3d(0, 0, 0);
-
+        transform: translate3d(-100%, 0, 0);
     }
 
     &.page--is-exiting,
