--- a/app/assets/styles/_page.scss
+++ b/app/assets/styles/_page.scss
@@ -1,3 +1,37 @@
+.blue {
+    background-color: #3883d8;
+}
+.turqoise {
+    background-color: #38ced7;
+}
+.brown {
+    background-color: #a66f28;
+}
+.bordeaux {
+    background-color: #953543;
+}
+.skin {
+    background-color: #ED9F4C;
+}
+.black {
+    background-color: #000000;
+}
+.white {
+    background-color: #FFFFFF;
+}
+.red {
+    background-color: #cf3535;
+}
+.green {
+    background-color: #22d659;
+}
+.orange {
+    background-color: #ea6300;
+}
+.pane {
+        height: 100%;
+        width: 100%;
+    }
 .page {
     /*     width: 100%;
         height: 100%; */
