--- a/app/assets/styles/_home.scss
+++ b/app/assets/styles/_home.scss
@@ -35,3 +35,51 @@
         //-top: -10em;
     }
 }
+
+.animate {
+    /*     position: absolute;
+        background: red; */
+}
+
+h1.animatable {
+    text-align: left !important;
+}
+
+.js .animatable {
+    will-change: transform, opacity;
+    opacity: 0;
+    transform: translate3d(-100%, 10px, 0); //start 'em off-screen
+
+    span {
+        background: #333;
+        color: red;
+        padding: 10px 5px;
+    }
+}
+
+#pin-container {
+    width: 100%;
+    height: 100% !important;
+    overflow: hidden;
+}
+
+.pin-panel {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+
+.parallaxParent {
+    height: 50vh;
+    overflow: hidden;
+
+    @include respond-min(45em) {
+        height: 100vh;
+    }
+}
+
+.parallaxParent > * {
+    height: 200%;
+    position: relative;
+    top: -100%;
+}
