--- a/app/assets/templates/project.html
+++ b/app/assets/templates/project.html
@@ -1,6 +1,6 @@
-<div id="project-<%= data.id %>" class="project__inner project__inner-<%= data.index %>">
+<div id="project-<%= data.id %>" class="project__inner project__inner--<%= data.index %>">
     <a href="<%= data.url %>" title="<%= data.title %>"><%= data.image %></a>
     <div class="project__meta">
-        <h2><a href="<%= data.url %>" title="<%= data.title %>"><%= data.title %></a></h2>
+        <h2 class="project__title"><a href="<%= data.url %>" title="<%= data.title %>"><%= data.title %></a></h2>
     </div>
 </div>
