switches from manually rendering to use Marionette's built in data binding

--- a/app/assets/templates/projects.html
+++ b/app/assets/templates/projects.html
@@ -1,4 +1,6 @@
 <article class="primary">
-    <h1><%= data.title %></h1>
-    <div class="js-projects"></div>
+    <h1>Projects</h1>
+    <div class="">
+        <ul class="js-projects projects"></ul>
+    </div>
 </article>
