--- a/app/assets/templates/page.html
+++ b/app/assets/templates/page.html
@@ -1,4 +1,4 @@
 <article class="primary">
-    <h1><%= data.title %></h1>
-    <p><%= data.content %></p>
+    <h1><%= title %></h1>
+    <p><%= content %></p>
 </article>
