project clean up

--- a/app/assets/styles/_project.scss
+++ b/app/assets/styles/_project.scss
@@ -39,10 +39,24 @@
     background: green;
 }
 
-
 .project__inner--3 {
     background: red;
 }
+
+.project__inner--4 {
+    background: yellow;
+}
+
+
+.project__inner--5 {
+    background: blue;
+}
+
+.project__inner--6 {
+    background: #fd6a62;
+}
+
+
 .project__meta {
     a {
        color: #fff;
